eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Teller_Print_Template__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Re_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Re-Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Type__c</fullName>
        <label>Print Type</label>
        <picklist>
            <picklistValues>
                <fullName>Before host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Log</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teller_Function__c</fullName>
        <label>Teller Function</label>
        <referenceTo>Teller_Function__c</referenceTo>
        <relationshipLabel>Teller Print Templates</relationshipLabel>
        <relationshipName>Teller_Print_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Template_HTML__c</fullName>
        <label>Template HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Teller Print Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teller Print Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Print Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>